feat: add game recommendations query param
